--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 NODE_ENV=development
 PORT=3888
 
-DB_HOST="192.168.100.118"
+DB_HOST=localhost
 DB_USERNAME=root
-DB_PASSWORD=sundaya2023
+DB_PASSWORD=
 DB_NAME=sla
